--- a/Laboratory/package.json
+++ b/Laboratory/package.json
@@ -28,7 +28,7 @@
     }
   },
   "dependencies": {
-    "algaeh-mysql": "^1.1.13",
+    "algaeh-mysql": "^1.1.18",
     "body-parser": "^1.18.2",
     "compression": "^1.7.3",
     "concurrently": "^3.5.1",
@@ -37,7 +37,8 @@
     "express": "^4.16.3",
     "winston": "^2.4.2",
     "winston-daily-rotate-file": "^3.1.4",
-    "node-linq": "0.0.5"
+    "node-linq": "0.0.5",
+    "node-string-pad": "0.0.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
