--- a/client/src/utils/config.json
+++ b/client/src/utils/config.json
@@ -9,6 +9,10 @@
       "port": 3001,
       "url": ""
     },
+    "laboratory": {
+      "port": 3013,
+      "url": ""
+    },
     "finance": {
       "port": 3007,
       "url": ""
