--- a/Pharmacy/package.json
+++ b/Pharmacy/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pharmacy",
+  "name": "algaeh-pharmacy",
   "version": "1.0.0",
   "description": "Algaeh Pharmacy Module",
   "main": "dist",
@@ -21,7 +21,8 @@
     "cross-env": "^5.1.4",
     "express": "^4.16.3",
     "winston": "^2.4.2",
-    "winston-daily-rotate-file": "^3.1.4"
+    "winston-daily-rotate-file": "^3.1.4",
+    "node-linq": "0.0.5"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
