--- a/client/src/utils/config.json
+++ b/client/src/utils/config.json
@@ -9,6 +9,10 @@
       "port": 3001,
       "url": ""
     },
+    "pharmacy": {
+      "port": 3009,
+      "url": ""
+    },
     "laboratory": {
       "port": 3013,
       "url": ""
