--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "npm-run-all": "^4.1.3",
     "react": "^16.3.2",
     "react-chartjs-2": "^2.7.2",
+    "react-csv": "^1.1.1",
     "react-datepicker": "^2.1.0",
     "react-dom": "^16.3.2",
     "react-dropzone": "^4.2.9",
@@ -37,7 +38,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.84.0",
-    "sweetalert2": "^7.28.4"
+    "sweetalert2": "^7.28.4",
+    "xlsx": "^0.14.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
