--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint": "eslint src && eslint test",
     "pm2": "concurrently --kill-others  cross-env NODE_ENV=development  pm2 start  --max-memory-restart 850M \"babel-node src/internal_server.js \"  \"npm run client\"",
     "test": "export NODE_ENV=test npm run build && mocha --require babel-core/register --timeout=10000000",
-    "complete-build": "concurrently \"babel src -s -D -d ../algaeh_erp_live/Core \" \"babel HrManagement/src -s -D -d ../algaeh_erp_live/HrManagement\" \"babel DocumentManagement/src -s -D -d ../algaeh_erp_live/DocumentManagement\" \"babel MasterSettings/src -s -D -d ../algaeh_erp_live/MasterSettings\" \"babel Billing/src -s -D -d ../algaeh_erp_live/Billing\" \"babel FrontDesk/src -s -D -d ../algaeh_erp_live/FrontDesk\" \"babel Radiology/src -s -D -d ../algaeh_erp_live/Radiology\" \"babel Laboratory/src -s -D -d ../algaeh_erp_live/Laboratory\"",
+    "complete-build": "concurrently \"babel src -s -D -d ../algaeh_erp_live/Core \" \"babel HrManagement/src -s -D -d ../algaeh_erp_live/HrManagement\" \"babel DocumentManagement/src -s -D -d ../algaeh_erp_live/DocumentManagement\" \"babel MasterSettings/src -s -D -d ../algaeh_erp_live/MasterSettings\" \"babel Billing/src -s -D -d ../algaeh_erp_live/Billing\" \"babel FrontDesk/src -s -D -d ../algaeh_erp_live/FrontDesk\" \"babel Radiology/src -s -D -d ../algaeh_erp_live/Radiology\" \"babel Laboratory/src -s -D -d ../algaeh_erp_live/Laboratory\" \"babel Pharmacy/src -s -D -d ../algaeh_erp_live/Pharmacy\"",
     "start-core": "cross-env NODE_ENV=production pm2 start  -i 4 internal_server.js"
   },
   "eslintConfig": {
