--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "Hospital Information Management System",
   "main": "dist",
   "scripts": {
-    "internal_server": "cross-env NODE_ENV=development nodemon -w src --exec \"babel-node src/internal_server.js  \"",
+    "internal_server": "cross-env PORT=3000 NODE_ENV=development nodemon -w src --exec \"babel-node src/internal_server.js  \"",
     "build": "babel src -s -D -d dist ",
     "build_document_management": "babel DocumentManagement/src -s -D -d DocumentManagement/dist ",
     "client": "npm run start --prefix client",
     "hr_server": "npm run dev --prefix HrManagement",
     "doc_mgmt": "npm run document_server --prefix DocumentManagement",
     "api": "concurrently \"npm run internal_server\"",
-    "dev": "concurrently --kill-others  \"npm run internal_server \" \"npm run client\"  \"npm run doc_mgmt\"",
+    "dev": "concurrently --kill-others  \"npm run internal_server \" \"npm run client\"",
     "start12333": "cross-env NODE_ENV=production pm2 start  -i 4 dist/internal_server.js",
     "npminstall": "npm install && npm install --prefix client",
     "prod_build": "npm run build --prefix client && npm run build",
@@ -19,7 +19,7 @@
     "pm2": "concurrently --kill-others  cross-env NODE_ENV=development  pm2 start  --max-memory-restart 850M \"babel-node src/internal_server.js \"  \"npm run client\"",
     "test": "export NODE_ENV=test npm run build && mocha --require babel-core/register --timeout=10000000",
     "complete-build": "concurrently \"babel src -s -D -d ../algaeh_erp_live/Core \" \"babel HrManagement/src -s -D -d ../algaeh_erp_live/HrManagement\" \"babel DocumentManagement/src -s -D -d ../algaeh_erp_live/DocumentManagement\" \"babel MasterSettings/src -s -D -d ../algaeh_erp_live/MasterSettings\" \"babel Billing/src -s -D -d ../algaeh_erp_live/Billing\" \"babel FrontDesk/src -s -D -d ../algaeh_erp_live/FrontDesk\" \"babel Radiology/src -s -D -d ../algaeh_erp_live/Radiology\" \"babel Laboratory/src -s -D -d ../algaeh_erp_live/Laboratory\" \"babel Pharmacy/src -s -D -d ../algaeh_erp_live/Pharmacy\" \"babel Inventory/src -s -D -d ../algaeh_erp_live/Inventory\" \"babel Procurement/src -s -D -d ../algaeh_erp_live/Procurement\"",
-    "start-core": "cross-env NODE_ENV=production pm2 start  -i 4 internal_server.js"
+    "start-core": "cross-env PORT=3000 NODE_ENV=production pm2 start  -i 4 internal_server.js"
   },
   "eslintConfig": {
     "parserOptions": {
@@ -39,6 +39,7 @@
   "author": "ALGAEH Technologies Pvt Ltd",
   "license": "ISC",
   "dependencies": {
+    "algaeh-mysql": "^1.2.0",
     "aws-sdk": "^2.247.1",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
