--- a/client/src/utils/config.json
+++ b/client/src/utils/config.json
@@ -53,6 +53,10 @@
     "procurement": {
       "port": 3017,
       "url": ""
+    },
+    "MRD": {
+      "port": 3016,
+      "url": ""
     }
   },
   "apiAuth": {
