--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "dist",
   "scripts": {
     "internal_server": "cross-env PORT=3000 NODE_ENV=development nodemon -w src --exec \"babel-node src/internal_server.js  \"",
+    "debug": "cross-env PORT=3000 NODE_ENV=development nodemon -w src src/internal_server.js --exec \"babel-node --inspect  src/internal_server.js  \"",
     "build": "babel src -s -D -d dist ",
     "build_document_management": "babel DocumentManagement/src -s -D -d DocumentManagement/dist ",
     "client": "npm run start --prefix client",
     "hr_server": "npm run dev --prefix HrManagement",
     "doc_mgmt": "npm run document_server --prefix DocumentManagement",
     "api": "concurrently \"npm run internal_server\"",
-    "dev": "concurrently --kill-others  \"npm run internal_server \" \"npm run client\"",
+    "dev": "concurrently --kill-others  \"npm run debug \" \"npm run client\"",
     "start12333": "cross-env NODE_ENV=production pm2 start  -i 4 dist/internal_server.js",
     "npminstall": "npm install && npm install --prefix client",
     "prod_build": "npm run build --prefix client && npm run build",
@@ -83,8 +84,8 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
     "babel-eslint": "^8.2.3",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.1.2",
@@ -94,6 +95,7 @@
     "knex": "^0.14.6",
     "knex-cleaner": "^1.1.4",
     "mocha": "^5.1.1",
+    "node-inspect": "^1.11.5",
     "nodemon": "^1.17.3"
   }
 }
