--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.84.0",
+    "socket.io-client": "^2.2.0",
     "sweetalert2": "^7.28.4",
     "xlsx": "^0.14.1"
   },
