--- a/HrManagement/package.json
+++ b/HrManagement/package.json
@@ -41,7 +41,8 @@
     "mssql": "^4.3.2",
     "node-linq": "0.0.5",
     "winston": "^2.4.2",
-    "winston-daily-rotate-file": "^3.1.4"
+    "winston-daily-rotate-file": "^3.1.4",
+    "mathjs": "^5.1.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
