--- a/AlgaehReporting/package.json
+++ b/AlgaehReporting/package.json
@@ -42,6 +42,7 @@
     "cors": "^2.8.4",
     "cross-env": "^5.1.4",
     "cryptr": "^4.0.0",
+    "easy-pdf-merge": "^0.2.1",
     "express": "^4.16.3",
     "fs-extra": "^7.0.1",
     "handlebars": "^4.1.2",
