--- a/client/package.json
+++ b/client/package.json
@@ -47,10 +47,10 @@
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
-    "start-js": "react-scripts start",
+    "start-js": "react-app-rewired start",
     "start": "cross-env PORT=1313 npm-run-all -p watch-css start-js",
-    "build-js": "react-scripts --max_old_space_size=4096 build",
-    "build": "npm-run-all build-css build-js",
+    "build-js": "react-app-rewired --max_old_space_size=4096 build",
+    "build": "GENERATE_SOURCEMAP=false  npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "start-server": "cross-env PORT=1414 npm-run-all -p watch-css start-js"
@@ -71,5 +71,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-app-rewire-optimize": "^1.0.2",
+    "react-app-rewire-vendor-splitting": "^1.3.0",
+    "react-app-rewired": "^2.1.3"
   }
 }
