--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,13 @@
     "axios-cancel": "^0.2.2",
     "chart.js": "^2.7.2",
     "cleave.js": "^1.4.4",
+    "cornerstone-core": "^2.2.8",
+    "cornerstone-math": "^0.1.8",
+    "cornerstone-tools": "^3.7.2",
+    "cornerstone-wado-image-loader": "^2.2.3",
     "cross-env": "^5.1.4",
+    "dicom-parser": "^1.8.3",
+    "hammerjs": "^2.0.8",
     "html2canvas": "^1.0.0-alpha.12",
     "js2xmlparser": "^3.0.0",
     "jsbarcode": "^3.9.0",
@@ -21,6 +27,7 @@
     "npm-run-all": "^4.1.3",
     "react": "^16.3.2",
     "react-chartjs-2": "^2.7.2",
+    "react-cornerstone-viewport": "^0.1.25",
     "react-csv": "^1.1.1",
     "react-datepicker": "^2.1.0",
     "react-dom": "^16.3.2",
@@ -30,6 +37,7 @@
     "react-number-format": "^3.6.2",
     "react-quill": "^1.3.1",
     "react-redux": "^5.0.7",
+    "react-resize-detector": "^4.1.3",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.4",
@@ -50,7 +58,7 @@
     "start-js": "react-app-rewired start",
     "start": "cross-env PORT=1313 npm-run-all -p watch-css start-js",
     "build-js": "react-app-rewired --max_old_space_size=4096 build",
-    "build": "GENERATE_SOURCEMAP=false  npm-run-all build-css build-js",
+    "build": "cross-env GENERATE_SOURCEMAP=false  npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "start-server": "cross-env PORT=1414 npm-run-all -p watch-css start-js"
