--- a/AlgaehReporting/package.json
+++ b/AlgaehReporting/package.json
@@ -36,8 +36,8 @@
   },
   "dependencies": {
     "algaeh-mysql": "^1.2.5",
+    "blob": "0.0.5",
     "body-parser": "^1.18.2",
-    "chrome-page-eval": "^1.2.0",
     "compression": "^1.7.3",
     "concurrently": "^3.5.1",
     "cors": "^2.8.4",
@@ -47,10 +47,10 @@
     "express": "^4.16.3",
     "fs-extra": "^7.0.1",
     "handlebars": "^4.1.2",
-    "html-to-xlsx": "^1.1.0",
     "moment": "^2.22.1",
     "puppeteer": "^1.14.0",
-    "xlsx": "^0.14.2"
+    "xlsx": "^0.14.2",
+    "xlsx-template": "^0.5.0"
   },
   "keywords": [],
   "author": "",
